tdf#38231 - Change default example date value to 1999-12-01

Change default example date value from 1999-12-31 to 1999-12-01. Otherwise, certain date formats cannot be distiguished in the preview window, e.g., D MM (1 Dec / 01 Dec 99 vs. 31 Dec / 31 Dec).

Change-Id: Iebd78de8d5ef8615c4f2bf400357745e7acfb857
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162308
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>